rgbds-0.6.1/test/asm/incompatible-alignment.asm
; These section fragments have alignments that make them non-contiguous,
; and thus are incompatible

SECTION FRAGMENT "Test", ROM0,ALIGN[8]

	ds 1

SECTION FRAGMENT "Test", ROM0,ALIGN[8]
